[package]
name = "go-rayyildiz-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
authors = ["Ramazan AYYILDIZ"]
homepage = "https://ob5jrkbljxjymoohr7qt42tl2y0otrln.lambda-url.eu-west-1.on.aws/"
repository = "https://github.com/rayyildiz/go-rayyildiz-rs"
keywords  = ["demo","aws_lambda"]

[dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }


#[profile.release]
#strip = false
#opt-level = "s"
